--- a/src/app/componentes/horarios/horarios.component.css
+++ b/src/app/componentes/horarios/horarios.component.css
@@ -7,3 +7,29 @@
    justify-content: flex-end;
    
 }
+.horarios{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+    text-align: center;
+    align-items: center;
+    padding: 2rem;
+    border-radius: 1rem;
+    -webkit-box-shadow: 10px 10px 25px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 25px -2px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 25px -2px rgba(0,0,0,0.75);
+
+}
+.select{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+table {
+    margin-top: 3rem;
+    width: 100%;
+    
+  }
