--- a/src/app/componentes/horarios/horarios.component.html
+++ b/src/app/componentes/horarios/horarios.component.html
@@ -13,34 +13,64 @@
       <div class="horarios">
           <p>Al Seleccionar Días y horarios especificos, reducira la visivilidad de los turnos a Aceptar ajustandose a estas restricciones.De no ingresar ninguno, se concidera que esta disponible en los dias y horarios de atencion de la clínica.
           </p>
-          <div class="row">
-            <mat-form-field style="width: 25%;" class="full-width-input">
+          <div class="select">
+            <mat-form-field style="width: 40%;" class="full-width-input">
                 <mat-label style="color: #c2185b;">Seleccione un Día</mat-label>
             <mat-select  name="tipo" [(ngModel)]="dia"> 
   
-              <mat-option *ngFor="let item of dias" value="{{item}}">{{item}}</mat-option>
-             
+              <mat-option (click)="sabado()" *ngFor="let item of dias" value="{{item}}">{{item}}</mat-option>
+            
             </mat-select>
-         </mat-form-field>
-         <mat-form-field style="width: 25%;" class="full-width-input">
-          <mat-label style="color: #c2185b;">Seleccione una hora</mat-label>
-      <mat-select  name="tipo" [(ngModel)]="hora"> 
+            </mat-form-field>
+            <mat-form-field   style="width: 40%;" class="full-width-input">
+              <mat-label style="color: #c2185b;">Seleccione una hora</mat-label>
+          <mat-select [disabled]="dia == undefined"  name="tipo" [(ngModel)]="hora"> 
 
-        <mat-option *ngFor="let item of horarios" value="{{item}}">{{item}}</mat-option>
-       
-      </mat-select>
-   </mat-form-field>
-   <button class="btn btn-success" (click)="atencion()">Agregar</button>
-  
-
-
-
-         <!-- <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Elija un dia</mat-label>
-            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field> -->
-          </div>
+            <mat-option *ngFor="let item of horarios" value="{{item}}">{{item}}</mat-option>
+          
+          </mat-select>
+      </mat-form-field>
+      
       </div>
-  </div>
+      <button style="margin-top: 2rem;" class="btn btn-success btn-block" (click)="atencion()">Agregar</button>
+ </div>
+ <table mat-table [dataSource]="profesional.atencion"  class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="Nombre">
+    <th mat-header-cell *matHeaderCellDef> Nombre </th>
+    <td mat-cell *matCellDef="let element"> {{profesional.nombre}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="Día">
+    <th mat-header-cell *matHeaderCellDef> Día </th>
+    <td mat-cell *matCellDef="let element"> {{element.dia}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="Hora">
+    <th mat-header-cell *matHeaderCellDef> Hora </th>
+    <td mat-cell *matCellDef="let element"> {{element.hora}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Acción">
+    <th mat-header-cell *matHeaderCellDef> Acción </th>
+    <td mat-cell *matCellDef="let element "> <button (click)="eliminar(element)" class="btn btn-danger"><span class="material-icons">
+      delete
+      </span></button> </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+</div>
+           <!-- <mat-form-field class="example-full-width" appearance="fill">
+             <mat-label>Elija un dia</mat-label>
+             <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker">
+             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+             <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field> -->
