--- a/src/app/componentes/modal-turno/modal-turno.component.css
+++ b/src/app/componentes/modal-turno/modal-turno.component.css
@@ -1,32 +1,7 @@
-.atras{
-    
-    width: 100%;
-   display: flex;
-   flex-direction: row;
-   flex-wrap: wrap;
-   justify-content: flex-end;
-   
-}
-table{
-    width: 80%;
-    border-radius: 1rem;
-    -webkit-box-shadow: -2px 7px 47px -10px rgba(0,0,0,0.75);
-    -moz-box-shadow: -2px 7px 47px -10px rgba(0,0,0,0.75);
-    box-shadow: -2px 7px 47px -10px rgba(0,0,0,0.75);
-    
-}
-.div1{
-     margin-top: 5rem;
-     overflow:auto;
-     height:25rem;
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     
-}
+/* Modal Content/Box */
 /*Modal*/
 .modal {
-    display: none; /* Hidden by default */
+    display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
@@ -38,8 +13,6 @@ table{
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 60px;
 }
-
-/* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
     margin: 10% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
@@ -58,27 +31,12 @@ table{
     font-weight: bold;
     margin-bottom: 3rem;
 }
+button{
+    margin-bottom: 2rem;
+}
 
 .close:hover,
 .close:focus {
     color: red;
     cursor: pointer;
-}
-@media screen and (max-width: 800px)
-{
-   table{
-       width: 20rem;
-       height: 20rem;
-   }
-   .container{
-       justify-content: left;
-   }
-}
-@media screen and (max-width: 430px)
-{
-   table{
-       width: 10rem;
-       height: 10rem;
-   }
-   
 }
