--- a/src/app/componentes/turnos-list/turnos-list.component.html
+++ b/src/app/componentes/turnos-list/turnos-list.component.html
@@ -60,10 +60,11 @@
             <td>{{turno.estado|estadoTurno}}  </td>
             <!-- <td>{{turno.comentario}} </td> -->
             <td *ngIf="usuario.rol !='admin'">
-              <button *ngIf="usuario.rol == 'paciente'" (click)="cancelar(turno)" class="btn btn-danger" style="margin-right: 1rem;">Cancelar</button>
-              <button *ngIf="usuario.rol == 'profesional'" (click)="aceptar(turno)" class="btn btn-success" style="margin-right: 1rem;">Aceptar</button>
-              <button *ngIf="usuario.rol == 'profesional'" class="btn btn-danger" >Rechazar</button>
-
+              <button *ngIf="usuario.rol == 'paciente' && turno.estado < 3" (click)="cancelar(turno)" class="btn btn-danger" style="margin-right: 1rem;">Cancelar</button>
+              <button *ngIf="usuario.rol == 'profesional' && turno.estado == 0" (click)="aceptar(turno)" class="btn btn-success" style="margin-right: 1rem;">Aceptar</button>
+              <button *ngIf="usuario.rol == 'profesional'  && turno.estado == 0" class="btn btn-danger" (click)="rechazar(turno)" >Rechazar</button>
+              <button *ngIf="usuario.rol == 'profesional' && turno.estado == 1 " class="btn btn-danger" (click)="cancelar(turno)" class="btn btn-danger" style="margin-right: 1rem;">Cancelar</button>
+              
 
             </td>
           </tr>     
@@ -73,5 +74,5 @@
       
     </div>
     <app-turno-detalle [user]="usuario" [turno]="turnoSeleccionado"(eventoMostrarModal)="mostrarEncuesta($event)"></app-turno-detalle>
-    <app-modal-turno [user]="usuario" [turno]="turnoSeleccionado"[mostrar]="mostrarModal" (eventoMostrarModal)="mostrarEncuesta($event)"></app-modal-turno>
+    <app-modal-turno [cancelar]="cancelarPro" [rechazar]="rechazarPro" [user]="usuario" [turno]="turnoSeleccionado"[mostrar]="mostrarModal" (eventoMostrarModal)="mostrarEncuesta($event)" (eventoJustifacion)="justificacion($event)"></app-modal-turno>
    
