--- a/src/app/componentes/modal-turno/modal-turno.component.html
+++ b/src/app/componentes/modal-turno/modal-turno.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="mostrar"  id="id01" class="modal ld ld-zoom-in">
     <form class="modal-content animate" >
       <span (click)="cerrar()" class="close" title="Close Modal">×</span>
-      <div style="margin-top: 3rem;" class="container">
+      <div *ngIf="!cancelar && !rechazar" style="margin-top: 3rem;" class="container">
         
-        <mat-form-field style="width: 100%; " class="full-width-input">
+        <mat-form-field *ngIf="user.rol == 'paciente'" style="width: 100%; " class="full-width-input">
           <mat-label style="color: #c2185b;">Califique el servicio de 1 a 5</mat-label>
           <mat-select  (change)="cargarDatos()" [(ngModel)]="turno.calificacionPaciente" [ngModelOptions]="{standalone: true}" > 
               
@@ -12,11 +12,41 @@
             
           </mat-select>
           
-       </mat-form-field>    
-       <mat-form-field style="width: 100%;" appearance="fill">
+       </mat-form-field>  
+       <mat-form-field *ngIf="user.rol == 'profesional'" style="width: 100%; " class="full-width-input">
+        <mat-label style="color: #c2185b;"> Calificar al paciente de 1 a 5</mat-label>
+        <mat-select  [(ngModel)]="turno.calificacionProfesional" [ngModelOptions]="{standalone: true}" > 
+            
+          <mat-option *ngFor="let item of calificaciones"  [value]="item">{{item}}</mat-option>
+          
+          
+        </mat-select>
+        
+     </mat-form-field>    
+       <mat-form-field  style="width: 100%;" appearance="fill">
         <mat-label>Dejanos tu comentario</mat-label>
-        <textarea  [(ngModel)]="turno.opinionPaciente" matInput [ngModelOptions]="{standalone: true}"></textarea>
+        <textarea *ngIf="user.rol == 'paciente'"  [(ngModel)]="turno.opinionPaciente" matInput [ngModelOptions]="{standalone: true}"></textarea>
+        <textarea *ngIf="user.rol == 'profesional'"  [(ngModel)]="turno.opinionProfesional" matInput [ngModelOptions]="{standalone: true}"></textarea>
+        
       </mat-form-field>
+
+   
+
+        <div class="clearfix row" style="justify-content: center;">
+          <button  (click)="Enviar()"  type="submit" class="btn-success btn-lg boton " onclick="this.blur();">Enviar Respuesta</button>
+        </div>
+      </div>
+
+
+      <div *ngIf="cancelar || rechazar" style="margin-top: 3rem;" class="container">
+           
+        <mat-form-field  style="width: 100%;" appearance="fill">
+        <mat-label>Dejananos tu justificación</mat-label>
+        <textarea *ngIf="user.rol == 'profesional'"  [(ngModel)]="turno.comentario" matInput [ngModelOptions]="{standalone: true}"></textarea>
+        
+      </mat-form-field>
+
+   
 
         <div class="clearfix row" style="justify-content: center;">
           <button  (click)="Enviar()"  type="submit" class="btn-success btn-lg boton " onclick="this.blur();">Enviar Respuesta</button>
