boton de activar/ desactivar captchat

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -28,8 +28,8 @@
         <input style="color: black;" matInput type="password" [(ngModel)]="clave" name="psw">
       </mat-form-field>
    
-      <div class="recaptcha">
-        <re-captcha (resolved)="resolved($event)" siteKey="6Lfc9twZAAAAAAjwYSzByar-hPR8o8rzi9mXE_FI"></re-captcha>
+      <div  class="recaptcha">
+        <re-captcha  (resolved)="resolved($event)" siteKey="6Lfc9twZAAAAAAjwYSzByar-hPR8o8rzi9mXE_FI"></re-captcha>
       </div>
       <!-- <div class="recaptcha">
         <ngx-recaptcha2 #captchaElem [siteKey]="siteKey">
@@ -37,6 +37,8 @@
       </div> -->
 
       <br>
+      <button  style="margin-top: 2rem;" class="btn btn-block"   mat-raised-button color="primary"  (click)="EntrarSinCaptcha()">Habilitar/Desabilitar</button>
+
       <button [disabled]="!recaptcha" style="margin-top: 2rem;" class="btn btn-block"   mat-raised-button color="primary"  (click)="Entrar()">Ingresar</button>
     
     </form>
