--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -2,8 +2,8 @@
   <img style="height: 3rem; width: 3rem; border-radius: 100%; margin-right: 2rem;" src="../../../assets/fondo.png" alt="">
     Iniciar Sesión
 </mat-toolbar>
-<div class="contenedor" >
-  <mat-card class="container" >
+<div class="contenedor " >
+  <mat-card class="container ld ld-blur-in" >
     <div class="imgcontainer">
       <img src="../../../assets/login.png" alt="Avatar" class="avatar" max-width="104" >
     </div>
