--- a/src/app/componentes/solicitar-turno/solicitar-turno.component.html
+++ b/src/app/componentes/solicitar-turno/solicitar-turno.component.html
@@ -1,13 +1,5 @@
-<mat-toolbar style="background-color: #c2185b; color: white;" class="expanded-toolbar">
-    <img style="height: 3rem; width: 3rem; border-radius: 100%; margin-right: 2rem;" src="../../../assets/fondo.png" alt="">
-      Solicitar Turno
-      <div class="atras">
-        <a style="color: aliceblue;" class="nav-link" href="javascript: history.go(-1)" tabindex="-1" aria-disabled="true" title="Atrás"
-        >
-        <i class="fa fa-sign-out"></i>
-       </a>
-      </div>
-  </mat-toolbar>
+
+  <app-cabecera [nombre]="'Solicitar Turno'"></app-cabecera>
 
   <div class="contenedor" >
     <mat-card class="container" >
