mejora de pedido de turno

--- a/src/app/componentes/sacar-turno/sacar-turno.component.css
+++ b/src/app/componentes/sacar-turno/sacar-turno.component.css
@@ -4,3 +4,33 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+.verif{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+    justify-content: center;
+    align-content: center;
+    margin-top: 5rem;
+}
+.cont{
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: xx-large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    justify-content: space-between;
+    width:20rem;
+    height: 25rem;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    -webkit-box-shadow: 10px 10px 24px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 24px -9px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 24px -9px rgba(0,0,0,0.75);
+
+
+}
