--- a/src/app/componentes/lista-fecha-hora/lista-fecha-hora.component.html
+++ b/src/app/componentes/lista-fecha-hora/lista-fecha-hora.component.html
@@ -1,4 +1,4 @@
-<div class="div1" *ngIf="profesional">
+<div class="div1" *ngIf="listado">
     <table class="table table-hover table-bordered animated fadeIn faster ld ld-slide-ttb-in">
         <thead>
           <tr class="bg-primary" style="color: white;">
@@ -10,9 +10,9 @@
           </tr>
         </thead>
         <tbody >
-          <tr *ngFor="let fecha of listado; let i = index" (click)="seleccionarFecha(fecha)">
+          <tr *ngFor="let fecha of listado |sortTurnos  let i = index" (click)="seleccionarFecha(fecha)">
             <td>{{fecha.numero}} </td>
-            <td>{{fecha.mes}} </td>
+            <td>{{fecha.mes |meses}} </td>
             <td>{{fecha.nombre}} </td>
             <td>{{fecha.hora}} </td>
 
