--- a/src/app/componentes/turnos-list/turnos-list.component.html
+++ b/src/app/componentes/turnos-list/turnos-list.component.html
@@ -20,9 +20,17 @@
     </mat-select>
  </mat-form-field>
  <br>
- <mat-form-field style="margin-left: 2rem;" *ngIf="fitroSeleccionado != 'Dia'  && fitroSeleccionado != undefined " >
+ <mat-form-field style="margin-left: 2rem;" *ngIf="fitroSeleccionado != 'Dia'  && fitroSeleccionado != undefined  && fitroSeleccionado != 'Adicionales' && fitroSeleccionado != 'SinFiltro' " >
    <input matInput placeholder="filtro" value="filtro" type="text" [(ngModel)]="escribir" >
  </mat-form-field>
+
+ <mat-form-field style="margin-left: 2rem;" *ngIf="fitroSeleccionado == 'Adicionales'  && fitroSeleccionado != undefined " >
+  <input matInput placeholder="descripcion" value="adicional" type="text" [(ngModel)]="adicional" >
+</mat-form-field>
+<mat-form-field style="margin-left: 2rem;" *ngIf="fitroSeleccionado == 'Adicionales'  && fitroSeleccionado != undefined " >
+  <input matInput placeholder="filtro" value="filtro" type="text" [(ngModel)]="escribir" >
+</mat-form-field>
+
  <!-- <input *ngIf="fitroSeleccionado != 'Dia' && fitroSeleccionado != undefined " type="text" [(ngModel)]="escribir"> -->
 
  <mat-form-field  *ngIf="fitroSeleccionado == 'Dia'" style="width: 40%; margin-left: 2rem;" class="full-width-input">
@@ -52,12 +60,12 @@
           </tr>
         </thead>
         <tbody >
-          <tr *ngFor="let turno of listado |filtro:fitroSeleccionado :escribir" >
+          <tr *ngFor="let turno of listado |filtro:fitroSeleccionado :escribir:adicional" >
             <td> <img [src]="turno.paciente.img1" alt="" width="100" height="100"></td>
             <td>{{turno.paciente.nombre}} </td>
             <td>{{turno.paciente.apellido}} </td>
             <td>{{turno.especialidad}} </td>
-            <td>{{turno.fecha}} </td>
+            <td>{{turno.fecha |fecha}} </td>
             <td>{{turno.hora}} </td>
             <td>{{turno.profesional.apellido}} </td>
             <td>{{turno.estado|estadoTurno}}  </td>
