--- a/src/app/componentes/turnos-list/turnos-list.component.html
+++ b/src/app/componentes/turnos-list/turnos-list.component.html
@@ -56,7 +56,7 @@
             <th>Profesional</th>
             <th>Estado</th>
             <!-- <th>Comentario</th> -->
-            <th *ngIf="usuario.rol != 'admin'">Acciones</th>
+            <th >Acciones</th>
           </tr>
         </thead>
         <tbody >
@@ -70,9 +70,9 @@
             <td>{{turno.profesional.apellido}} </td>
             <td>{{turno.estado|estadoTurno}}  </td>
             <!-- <td>{{turno.comentario}} </td> -->
-            <td *ngIf="usuario.rol !='admin'">
-              <button *ngIf="usuario.rol == 'paciente' && turno.estado < 2" (click)="cancelar(turno)" class="btn btn-danger" style="margin-right: 1rem;">Cancelar</button>
+            <td>
               <button  (click)="tomarTurno(turno)" class="btn btn-primary" style="margin-right: 1rem;">info</button>
+              <button *ngIf="usuario.rol == 'paciente' && turno.estado < 2" (click)="cancelar(turno)" class="btn btn-danger" style="margin-right: 1rem;">Cancelar</button>
               <button *ngIf="usuario.rol == 'profesional' && turno.estado == 0" (click)="aceptar(turno)" class="btn btn-success" style="margin-right: 1rem;">Aceptar</button>
               <button *ngIf="usuario.rol == 'profesional'  && turno.estado == 0" class="btn btn-danger" (click)="rechazar(turno)" >Rechazar</button>
               <button *ngIf="usuario.rol == 'profesional' && turno.estado == 1 " class="btn btn-danger" (click)="cancelar(turno)" class="btn btn-danger" style="margin-right: 1rem;">Cancelar</button>
