--- a/src/app/componentes/turnos-list/turnos-list.component.html
+++ b/src/app/componentes/turnos-list/turnos-list.component.html
@@ -10,7 +10,7 @@
   </mat-toolbar>
 
 
-  <mat-form-field style="width: 40%; margin-left: 2rem; margin-top: 2rem;" class="full-width-input">
+  <!-- <mat-form-field style="width: 40%; margin-left: 2rem; margin-top: 2rem;" class="full-width-input">
     <mat-label style="color: #c2185b;">Filtrar Por..</mat-label>
     <mat-select [(ngModel)]="fitroSeleccionado"  > 
         
@@ -18,11 +18,21 @@
       
       
     </mat-select>
- </mat-form-field>
+ </mat-form-field> -->
+ 
+<div class="buscador">
+  <input  class="form-control mr-sm-2 block" [(ngModel)]="escribir"  placeholder="Buscar" type="text" name="" id="">
+
+</div>
+
+
  <br>
- <mat-form-field style="margin-left: 2rem;" *ngIf="fitroSeleccionado != 'Dia'  && fitroSeleccionado != undefined  && fitroSeleccionado != 'Adicionales' && fitroSeleccionado != 'SinFiltro' " >
+ <!-- <mat-form-field style="margin-left: 2rem;" >
+  <input matInput placeholder="filtro" value="filtro" type="text" [(ngModel)]="escribir" >
+</mat-form-field> -->
+ <!-- <mat-form-field style="margin-left: 2rem;" *ngIf="fitroSeleccionado != 'Dia'  && fitroSeleccionado != undefined  && fitroSeleccionado != 'Adicionales' && fitroSeleccionado != 'SinFiltro' " >
    <input matInput placeholder="filtro" value="filtro" type="text" [(ngModel)]="escribir" >
- </mat-form-field>
+ </mat-form-field> -->
 
  <mat-form-field style="margin-left: 2rem;" *ngIf="fitroSeleccionado == 'Adicionales'  && fitroSeleccionado != undefined " >
   <input matInput placeholder="descripcion" value="adicional" type="text" [(ngModel)]="adicional" >
@@ -60,7 +70,10 @@
           </tr>
         </thead>
         <tbody >
-          <tr *ngFor="let turno of listado |filtro:fitroSeleccionado :escribir:adicional" >
+        
+          <!-- <tr *ngFor="let turno of listado |filtro:fitroSeleccionado :escribir:adicional" > -->
+          <tr *ngFor="let turno of listado |busqueda:escribir" >
+
             <td> <img [src]="turno.paciente.img1" alt="" width="100" height="100"></td>
             <td>{{turno.paciente.nombre}} </td>
             <td>{{turno.paciente.apellido}} </td>
